layout fix: cage location target icon was cut off on right.

--- a/client/css/_form.scss
+++ b/client/css/_form.scss
@@ -45,8 +45,7 @@
 
 .bop-icon-right {
 	input {
-		padding-right: 0;
-		margin-right: -40px;
+		@include flex(1, 159px);
 	}
 }
 
